# v2rayAI

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: release.yml
src/: App.jsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent.rs  ai_service.rs  app_logger.rs  chat_history.rs  config_generator.rs  config_manager.rs  core_manager.rs  health_monitor.rs  knowledge_base.rs  lib.rs  main.rs  secure_store.rs  sub_converter.rs  sys_proxy.rs  traffic_monitor.rs
src/components/: Sidebar.jsx  StatusBar.jsx
src/pages/: ChatPage.jsx  LogsPage.jsx  ServersPage.jsx  SettingsPage.jsx  ToolsPage.jsx  TrafficPage.jsx
